feat(inventory): add stock summary read model with ledger posting funnel (#1024)
Story parity-A1 (SPEC-pos-inventory-odoo-parity §2 A1): introduce the stored
inventory_stock_summary derived-balance table (V9) — one row per
(stock_item_id, location_id), nullable location_id for location-less postings,
with on_hand / allocated / reserved / atp / last_ledger_entry_id /
last_event_at. The unique key is created NULLS NOT DISTINCT so later stories
can add a nullable lot_id to the key and an in_transit_qty column without
reshaping the table.

Funnel refactor: every InventoryLedgerEntry append now flows through the new
internal LedgerPostingService (interface + impl), which persists the entry and
applies its delta to the summary row in the same transaction under a
SELECT ... FOR UPDATE row lock (deterministic key ordering across batches;
first-row creation in a REQUIRES_NEW nested transaction so a lost creation
race cannot poison the posting transaction). Refactored writers, preserving
their semantics exactly (quantityAfter math, validation, event types, fact
publishing): StockMovement, Reservation, Putaway-execute, Consumption,
Receiving, CycleCountAdjustment, Asn, Return, and InventoryLocation
(deactivation transfer) service impls.

Read switch: InventoryAvailabilityServiceImpl,
LocationInventoryInquiryServiceImpl, and SiteInventoryQuantityLoader (feeding
both rollup services) now read the summary instead of aggregating the ledger;
response contracts unchanged. The derived unit of measure still comes from a
single-row ledger lookup. A `reserved` column (beyond the spec's minimum
column list) preserves the pre-existing contract split: the per-location
availability list subtracts reservations from ATP while queryAvailability
per ADR-0001 subtracts hard allocations only. Ledger aggregation repository
methods remain for posting-path/validation math and the rebuild/verifier.

Operability: StockSummaryRebuildService truncates and reconstructs the
summary from the ledger in one 